--- a/src/main/webapp/mobile/asset/onlineregs/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.3/style/weui.min.css">
 	<link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.1/css/jquery-weui.min.css">
 	<script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+	<script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
+	<script src="../js/index.js"></script>
 	<!--  mobile Safari, FireFox, Opera Mobile  -->
 	<!-- <script src="js/modernizr.js"></script> -->
 </head>
@@ -41,7 +43,7 @@
 	</div>
 	<p style="color:red">请选择你所需办理业务</p>
 	<div class="weui-grids">
-			<a href="new/index.html" class="weui-grid js_grid" style="background-color: #699af7">
+			<a id="#newmap" href="new/index.html" class="weui-grid js_grid" style="background-color: #699af7">
 				<div class="weui-grid__icon">
 					<img src="../images/xinban.png" alt="">
 				</div>
