--- a/src/main/webapp/layuiadmin/check/checkPerson.html
+++ b/src/main/webapp/layuiadmin/check/checkPerson.html
@@ -6,15 +6,16 @@
     <title>人员管理</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../layui/css/layui.css" media="all">
 </head>
 <style>
-    .layui-inline{
-            margin-top: 10px;
-            margin-left: 10px;
-        }
-    </style>
+    .layui-inline {
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+</style>
 
 <body>
     <div class="layui-inline">
@@ -26,6 +27,13 @@
         </button>
     </div>
     <table class="layui-hide" id="test" lay-filter="test"></table>
+    <script type="text/html" id="toolbarDemo">
+        <div class="layui-btn-container">
+            <button class="layui-btn layui-btn-sm" lay-event="addUser">
+                <i class="layui-icon">&#xe608;</i> 添加
+              </button>
+        </div>
+      </script>
     <script src="../layui/layui.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script>
@@ -39,6 +47,7 @@
                 , url: '/ycglj/user/getAllCheckPerson.do?'
                 , title: '稽查人员信息表'
                 , page: true
+                , toolbar: '#toolbarDemo'
                 , cols: [[
                     { type: 'checkbox' },
                     { field: 'id', title: 'ID', sort: true }
@@ -73,26 +82,37 @@
                 // layer.msg('[ID: ' + data.id + '] ' + field + ' 字段更改为：' + value);
                 // layer.msg(field);
 
-                // $.ajax({
-                //   type: "get",
-                //   url: "/ycglj/user/updateUser.do?openId=" + data.open_id + "&" + field + "=" + value + "&license=" + data.license,
-                //   contentType: 'application/x-www-form-urlencoded;charset=utf-8',
-                //   data: {},
-                //   dataType: "json",
-                //   success: function (data) {
-                //     if (data == 1) {
-                //       layer.msg('修改成功', { icon: 1 });
-                //     } else if (data == 2) {
-                //       layer.msg('电话号码已存在', { icon: 2 });
-                //     } else {
-                //       layer.msg('error', { icon: 2 });
-                //       layui.form.render();
-                //     }
-                //   },
-                //   error: function (e) {
-                //     console.log(e);
-                //   }
-                // })
+                $.ajax({
+                    type: "get",
+                    url: "/ycglj/user/updateCheckPerson.do?phone=" + data.phone + "&" + field + "=" + value,
+                    contentType: 'application/x-www-form-urlencoded;charset=utf-8',
+                    data: {},
+                    dataType: "json",
+                    success: function (data) {
+                        if (data == 1) {
+                            layer.msg('修改成功', { icon: 1 });
+                        }
+                    },
+                    error: function (e) {
+                        console.log(e);
+                    }
+                })
+            });
+            //头工具栏事件
+            table.on('toolbar(test)', function (obj) {
+                var checkStatus = table.checkStatus(obj.config.id);
+                switch (obj.event) {
+                    case 'addUser':
+                        layer.open({
+                            title: '添加人员信息',
+                            type: 2,
+                            content: '/ycglj/layuiadmin/check/checkDialog.html',
+                            area: ['440px', '590px'],
+                            end: function () {
+                                table.reload('test');
+                            }
+                        });
+                };
             });
         })
     </script>
