--- a/src/main/webapp/mobile/asset/onlineregs/new/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/new/index.html
@@ -153,6 +153,7 @@
 	<script src="../../order/js/iconfont.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/jquery-weui/1.2.1/js/jquery-weui.min.js"></script>
+	<!-- <script type="text/javascript" src="js/index1.js"></script> -->
 	<script>
 		$('#map').click(function () {
 			$('#allmap').fadeToggle();
