--- a/src/main/webapp/mobile/asset/onlineregs/again/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/again/index.html
@@ -144,7 +144,7 @@
 	<script>
 		url = document.location.toString();
 		$.ajax({
-			url: "../../../wechat/sign.do",
+			url: "../../../../wechat/sign.do",
 			data: {
 				campusId: 1,
 				url: url
