--- a/src/main/webapp/mobile/asset/onlineregs/sucess.html
+++ b/src/main/webapp/mobile/asset/onlineregs/sucess.html
@@ -71,7 +71,7 @@
         </label>
     </div>
     <div class="footer">
-        <a href="javascript:;" onclick="" class="weui-btn_mini weui-btn weui-btn_warn">关 闭</a>
+        <a href="index.html" onclick="" class="weui-btn_mini weui-btn weui-btn_warn">关 闭</a>
     </div>
     </div>
 </body>
@@ -81,6 +81,7 @@
     var myDate = new Date();
     time = myDate.getFullYear() + "年" + (myDate.getMonth() + 1) + "月" + myDate.getDate() + "日   " + myDate.getHours() + "时" + myDate.getMinutes() + "分"
     $('.pFooter').text("申请时间:" + time);
+
 </script>
 
 </html>
