--- a/src/main/webapp/mobile/asset/onlineregs/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/index.html
@@ -10,100 +10,171 @@
 	<link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.1/css/jquery-weui.min.css">
 	<script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
-	<script src="../js/index.js"></script>
+	<!-- <script src="../js/index.js"></script> -->
 	<!--  mobile Safari, FireFox, Opera Mobile  -->
 	<!-- <script src="js/modernizr.js"></script> -->
 </head>
 <style>
-	.demos-title{
+	.demos-title {
 		text-align: center;
 		font-size: 25px;
 	}
-	a{
+
+	a {
 		margin: 2px;
 	}
-	.weui-grid__label{
-		color:white;
+
+	.weui-grid__label {
+		color: white;
 	}
-	.weui-grid{
-		width:32.3333333%;
+
+	.weui-grid {
+		width: 32.3333333%;
 	}
 </style>
+
 <body>
-		<div class="weui-cell weui-cell_select" style="width:100%;background-color: #67bd8c">
-			<div class="weui-cell__bd">
-				<select class="weui-select" name="select1" style="color:white;">
-					<option selected="" value="1">请选择您申请的地区:</option>
-					<option value="2">泸州市合江县</option>
-				</select>
-			</div>
+	<div class="weui-cell weui-cell_select" style="width:100%;background-color: #67bd8c">
+		<div class="weui-cell__bd">
+			<select class="weui-select" name="select1" style="color:white;">
+				<option selected="" value="1">请选择您申请的地区:</option>
+				<option value="2">泸州市合江县</option>
+			</select>
+		</div>
 	</div>
 	<div class="weui-cells">
-			<p class="demos-title">烟草专卖零售许可证</p>
+		<p class="demos-title">烟草专卖零售许可证</p>
 	</div>
 	<p style="color:red">请选择你所需办理业务</p>
 	<div class="weui-grids">
-			<a id="#newmap" href="new/index.html" class="weui-grid js_grid" style="background-color: #699af7">
-				<div class="weui-grid__icon">
-					<img src="../images/xinban.png" alt="">
-				</div>
-				<p class="weui-grid__label">
-					新办
-				</p>
-			</a>
-			<a href="stop/stop.html" class="weui-grid js_grid" style="background-color: #f2b86e">
-				<div class="weui-grid__icon">
-						<img src="../images/tingye.png" alt="">
-				</div>
-				<p class="weui-grid__label">
-					停业
-				</p>
-			</a>
-			<a href="../order/registration.html" class="weui-grid js_grid" style="background-color:#ee7e7a">
-				<div class="weui-grid__icon">
-					<img src="../images/yanxu.png" alt="">
-				</div>
-				<p class="weui-grid__label">
-					延续
-				</p>
-			</a>
-			<a href="buban/buban.html" class="weui-grid js_grid" style="background-color: #ec7094">
-				<div class="weui-grid__icon">
-					<img src="../images/buban.png" alt="">
-				</div>
-				<p class="weui-grid__label">
-					补办
-				</p>
-			</a>
-			<a href="again/again.html" class="weui-grid js_grid" style="background-color:#84737d">
-				<div class="weui-grid__icon">
-					<img src="../images/huifuyingye.png" alt="">
-				</div>
-				<p class="weui-grid__label">
-					恢复营业
-				</p>
-			</a>
-			<a href="biangen/biangen.html" class="weui-grid js_grid" style="background-color:#60c67d">
-				<div class="weui-grid__icon">
-					<img src="../images/biangeng.png" alt="">
-				</div>
-				<p class="weui-grid__label">
-					变更
-				</p>
-			</a>
-			<a href="xieye/xieye.html" class="weui-grid js_grid" style="background-color:#a07eee">
-				<div class="weui-grid__icon">
-					<img src="../images/xieye.png" alt="">
-				</div>
-				<p class="weui-grid__label">
-					歇业
-				</p>
-			</a>
-		</div>
+		<a onclick="newmap()" class="weui-grid js_grid" style="background-color: #699af7">
+			<div class="weui-grid__icon">
+				<img src="../images/xinban.png" alt="">
+			</div>
+			<p class="weui-grid__label">
+				新办
+			</p>
+		</a>
+		<a href="stop/stop.html" class="weui-grid js_grid" style="background-color: #f2b86e">
+			<div class="weui-grid__icon">
+				<img src="../images/tingye.png" alt="">
+			</div>
+			<p class="weui-grid__label">
+				停业
+			</p>
+		</a>
+		<a href="../order/registration.html" class="weui-grid js_grid" style="background-color:#ee7e7a">
+			<div class="weui-grid__icon">
+				<img src="../images/yanxu.png" alt="">
+			</div>
+			<p class="weui-grid__label">
+				延续
+			</p>
+		</a>
+		<a href="buban/buban.html" class="weui-grid js_grid" style="background-color: #ec7094">
+			<div class="weui-grid__icon">
+				<img src="../images/buban.png" alt="">
+			</div>
+			<p class="weui-grid__label">
+				补办
+			</p>
+		</a>
+		<a href="again/again.html" class="weui-grid js_grid" style="background-color:#84737d">
+			<div class="weui-grid__icon">
+				<img src="../images/huifuyingye.png" alt="">
+			</div>
+			<p class="weui-grid__label">
+				恢复营业
+			</p>
+		</a>
+		<a href="biangen/biangen.html" class="weui-grid js_grid" style="background-color:#60c67d">
+			<div class="weui-grid__icon">
+				<img src="../images/biangeng.png" alt="">
+			</div>
+			<p class="weui-grid__label">
+				变更
+			</p>
+		</a>
+		<a href="xieye/xieye.html" class="weui-grid js_grid" style="background-color:#a07eee">
+			<div class="weui-grid__icon">
+				<img src="../images/xieye.png" alt="">
+			</div>
+			<p class="weui-grid__label">
+				歇业
+			</p>
+		</a>
+	</div>
 
 </body>
-
 <script>
+	function newmap() {
+		url = document.location.toString();
+		$.ajax({
+			url: "../../../wechat/sign.do",
+			data: {
+				campusId: 1,
+				url: url
+			},
+			async: false,
+			type: "GET",
+			success: function (data) {
+				var ticket = JSON.parse(data);
 
+				wx.config({
+					debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+					appId: ticket.appId,
+					timestamp: ticket.timestamp,
+					nonceStr: ticket.nonceStr,
+					signature: ticket.signature,
+					jsApiList: ['checkJsApi', 'onMenuShareTimeline',
+						'onMenuShareAppMessage', 'onMenuShareQQ',
+						'onMenuShareWeibo', 'hideMenuItems',
+						'showMenuItems', 'hideAllNonBaseMenuItem',
+						'showAllNonBaseMenuItem', 'translateVoice',
+						'startRecord', 'stopRecord', 'onRecordEnd',
+						'playVoice', 'pauseVoice', 'stopVoice',
+						'uploadVoice', 'downloadVoice', 'chooseImage',
+						'previewImage', 'uploadImage', 'downloadImage',
+						'getNetworkType', 'openLocation', 'getLocation',
+						'hideOptionMenu', 'showOptionMenu', 'closeWindow',
+						'scanQRCode', 'chooseWXPay',
+						'openProductSpecificView', 'addCard', 'chooseCard',
+						'openCard']
+				});
+
+			}
+		});
+		wx.ready(function () {
+			// config信息验证后会执行ready方法，所有接口调用都必须在config接口获得结果之后，config是一个客户端的异步操作，所以如果需要在页面加载时就调用相关接口，则须把相关接口放在ready函数中调用来确保正确执行。对于用户触发时才调用的接口，则可以直接调用，不需要放在ready函数中。
+			wx.getLocation({
+				success: function (res) {
+					// alert(JSON.stringify(res));
+					var latitude = res.latitude; // 纬度，浮点数，范围为90 ~ -90
+					// $("#latitude").val(latitude);
+					var longitude = res.longitude; // 经度，浮点数，范围为180 ~ -180。
+					// $("#longitude").val(longitude);
+					var speed = res.speed; // 速度，以米/每秒计
+					// $("#speed").val(speed);
+					var accuracy = res.accuracy; // 位置精度
+					// $("#accuracy").val(accuracy);
+
+					$.get("/ycglj/mobile/map/baiduSwitch.do", { //微信地理位置坐标转换成百度地图坐标
+						longitude: longitude,
+						latitude: latitude
+					}, function (text) {
+						var obj = $.parseJSON(text);
+						var result = obj.result;
+						var lat = result[0].y;
+						var lng = result[0].x;
+						location.href = "../../asset/onlineregs/new/index.html?latitude=" + lat + "&longitude=" + lng;
+					});
+
+				},
+				cancel: function (res) {
+					alert('用户拒绝授权获取地理位置');
+				}
+			});
+		});
+	}
 </script>
 </html>
