--- a/src/main/webapp/mobile/asset/onlineregs/stop/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/stop/index.html
@@ -19,7 +19,14 @@
 			margin-top: 1em;
 			margin-bottom: 1em;
 		} */
-		body, html,#allmap {width: 100%;height: 70%;margin:0;font-family:"微软雅黑";}
+		body,
+		html,
+		#allmap {
+			width: 100%;
+			height: 70%;
+			margin: 0;
+			font-family: "微软雅黑";
+		}
 
 		input {
 			padding: .5em;
@@ -118,15 +125,15 @@
 		</a>
 		<div class="weui-cells__title">请选择申请停业整顿期限</div>
 		<div class="weui-cell">
-				<div class="weui-cell__hd"><label for="date" class="weui-label">日期</label></div>
-				<div class="weui-cell__bd">
-					<input class="weui-input" id="date" type="text">
-				</div>
-				<div style="text-align: center" class="weui-cell__hd"><label for="date1" class="weui-label">至</label></div>
-				<div class="weui-cell__bd">
-					<input class="weui-input" id="date1" type="text">
-				</div>
+			<div class="weui-cell__hd"><label for="date" class="weui-label">日期</label></div>
+			<div class="weui-cell__bd">
+				<input class="weui-input" id="date" type="text">
 			</div>
+			<div style="text-align: center" class="weui-cell__hd"><label for="date1" class="weui-label">至</label></div>
+			<div class="weui-cell__bd">
+				<input class="weui-input" id="date1" type="text">
+			</div>
+		</div>
 	</div>
 
 
@@ -152,42 +159,11 @@
 			var r = window.location.search.substr(1).match(reg);
 			if (r != null) return unescape(r[2]); return null;
 		}
-		function getByteLen(val) {    //传入一个字符串
-        var len = 0;
-        for (var i = 0; i < val.length; i++) {
-            if (val[i].match(/[^\x00-\xff]/ig) != null) //全角 
-                len += 2; //如果是全角，占用两个字节  如果mysql中某字段是text, 如果设置编码为utf-8,那么一个中文是占3个字节, gbk是两个字节
-            else
-                len += 1; //半角占用一个字节
-        }
-        return len;
-     }  
-
-		var license = getQueryString("license");
-		// 百度地图API功能
-		var map = new BMap.Map("allmap");    // 创建Map实例
-
-		var longitude = getQueryString("longitude");
-		var latitude = getQueryString("latitude");
-		var point = new BMap.Point(longitude, latitude);
-		var str = "我的位置";
-		var opts = {
-			position: point,    // 指定文本标注所在的地理位置
-			offset: new BMap.Size(-getByteLen(str) * 3, 5)    //设置文本偏移量
-		}
-		var label = new BMap.Label(str, opts);  // 创建文本标注对象
-		label.setStyle({
-			fontSize: "12px",
-			height: "20px",
-			lineHeight: "20px",
-			fontFamily: "微软雅黑"
-		});
-		map.addOverlay(label);   
 	</script>
 	<script>
 		url = document.location.toString();
 		$.ajax({
-			url: "../../../wechat/sign.do",
+			url: "../../../../wechat/sign.do",
 			data: {
 				campusId: 1,
 				url: url
@@ -225,46 +201,44 @@
 
 		var licenseImg = [];
 
-		$.post('/ycglj/mobile/user/getUserAuthen.do', {
+		// $.post('/ycglj/mobile/user/getUserAuthen.do', {
 
-		}, function (data) {
-			if (data == 3) {
-				$.alert({
-					title: "提示",
-					text: "你的资料正在审核中,不能重复提交",
-					onOK: function () {
-						//点击确认
-						location.href = "/ycglj/mobile/asset";
-					}
-				});
-			} else if (data == 1) {
-				$.alert({
-					title: "提示",
-					text: "你的资料审核",
-					onOK: function () {
-						//点击确认
-						location.href = "/ycglj/mobile/asset";
-					}
-				});
-			}
-		});
-		function getLicense(license) {
-			setActionSheet("license", license);
-			licenseImg.push("img" + license);
-		}
+		// }, function (data) {
+		// 	if (data == 3) {
+		// 		$.alert({
+		// 			title: "提示",
+		// 			text: "你的资料正在审核中,不能重复提交",
+		// 			onOK: function () {
+		// 				//点击确认
+		// 				location.href = "/ycglj/mobile/asset";
+		// 			}
+		// 		});
+		// 	} else if (data == 1) {
+		// 		$.alert({
+		// 			title: "提示",
+		// 			text: "你的资料审核",
+		// 			onOK: function () {
+		// 				//点击确认
+		// 				location.href = "/ycglj/mobile/asset";
+		// 			}
+		// 		});
+		// 	}
+		// });
+		// function getLicense(license) {
+		// 	setActionSheet("license", license);
+		// 	licenseImg.push("img" + license);
+		// }
 
-		function getBusiness(license) {
-			setActionSheet("business", license);
-			licenseImg.push("zz" + license);
-		}
+		// function getBusiness(license) {
+		// 	setActionSheet("business", license);
+		// 	licenseImg.push("zz" + license);
+		// }
 
-		function setActionSheet(dataType, license) {
-
+		function setActionSheet(dataType) {
 			var images = {
 				localId: [],
 				serverId: []
 			};
-
 			wx.chooseImage({
 				success: function (res) {
 					images.localId = res.localIds;
@@ -291,8 +265,7 @@
 								//返回图片的服务器端ID res.serverId,然后调用wxImgCallback函数进行下载图片操作
 								wxImgCallback(
 									dataType,
-									res.serverId,
-									license
+									res.serverId
 								);
 								//   images.serverId.push(res.serverId);
 								if (i < length) {
@@ -311,20 +284,17 @@
 			});
 
 		}
-
-		function wxImgCallback(dataType, serverId, license) {
+		function wxImgCallback(dataType, serverId) {
 			console.log("serverId=" + serverId);
-			console.log("license=" + license);
 			//将serverId传给wx_upload.php的upload方法
-			var url = "../../file/upload.do";
+			var url = "../../../file/upload.do";
 			$.get(
 				url,
 				{
 					campusId: 1,
 					serverId: serverId,
 					dataType: dataType,
-					classType: "user",
-					license: license
+					classType: "user"
 				},
 				function (text) {
 					console.log(text);
@@ -343,285 +313,131 @@
 						//存储到服务器成功后的处理
 						// location.reload();
 
-						var panel = document
-							.createElement("div");
-						panel
-							.setAttribute(
-								"class",
-								"weui-panel__bd");
-						var a = document
-							.createElement("a");
-						a.setAttribute("class",
-							"weui_grid");
-						var a = document
-							.createElement("a");
-						a
-							.setAttribute(
-								"href",
-								"javascript:void(0);");
-						a
-							.setAttribute(
-								"class",
-								"weui-media-box weui-media-box_appmsg");
-						var div = document
-							.createElement("div");
-						div
-							.setAttribute(
-								"class",
-								"weui-media-box__hd");
-
+						var panel = document.createElement("div");
+						panel.setAttribute("class", "weui-panel__bd");
+						var a = document.createElement("a");
+						a.setAttribute("class", "weui_grid");
+						var a = document.createElement("a");
+						a.setAttribute("href", "javascript:void(0);");
+						a.setAttribute("class", "weui-media-box weui-media-box_appmsg");
+						var div = document.createElement("div");
+						div.setAttribute("class", "weui-media-box__hd");
 						src = img;
-						var img = document
-							.createElement("img");
-						img
-							.setAttribute(
-								"class",
-								"weui-media-box__thumb");
-						img.setAttribute("src",
-							src);
+						var img = document.createElement("img");
+						img.setAttribute("class", "weui-media-box__thumb");
+						img.setAttribute("src", src);
 
 						div.appendChild(img);
 
-						div2 = document
-							.createElement("div");
-						div2
-							.setAttribute(
-								"class",
-								"weui-media-box__bd");
-						p = document
-							.createElement("p");
-						p
-							.setAttribute(
-								"class",
-								"weui-media-box__desc");
+						div2 = document.createElement("div");
+						div2.setAttribute("class", "weui-media-box__bd");
+						p = document.createElement("p");
+						p.setAttribute("class", "weui-media-box__desc");
 						div2.appendChild(p);
 						a.appendChild(div);
 						a.appendChild(div2);
 						panel.appendChild(a);
 
 						if (dataType == "identity") {
-							document
-								.getElementById("img1").innerHTML = "";
-							$("#img1").attr(
-								"name",
-								uuid);
-							$("#img1").append(
-								panel);
+							document.getElementById("img1").innerHTML = "";
+							$("#img1").attr("name", uuid);
+							$("#img1").append(panel);
 						} else if (dataType == "conIdentity") {
 							document.getElementById("img2").innerHTML = "";
 							$("#img2").attr("name", uuid);
 							$("#img2").append(panel);
-						} else if (dataType == "license") {
-							document.getElementById("img" + license).innerHTML = "";
-							$("#img" + license).attr("name", uuid);
-							$("#img" + license).append(panel);
-						} else if (dataType == "business") {
-							document.getElementById("zz" + license).innerHTML = "";
-							$("#zz" + license).attr("name", uuid);
-							$("#zz" + license).append(panel);
 						}
-						else if (dataType == "other") {
-							document.getElementById("other").innerHTML = "";
-							$("#other").attr("name", uuid);
-							$("#other").append(panel);
-						}
-
 					}
 				});
 		}
-
-		$(document).ready(
-			function () {
-
-				var license = [];
-				$.ajax({
-					url: "/ycglj/mobile/user/getUserLicense.do",
-					data: {
-					},
-					type: "GET",
-					success: function (data) {
-						console.log(data);
-						licenseData = JSON.parse(data);
-						// console.log(data);
-						// license = data[1].license;
-						console.log(data.length);
-						console.log(licenseData);
-
-						for (i = 0; i < licenseData.length; i++) {
-							license.push(licenseData[i].license);
-							$("[name='more']").append('<a class="weui-cell weui-cell_access" onclick="getBusiness(' + licenseData[i].license + ')" href="javascript:;">' +
-								'<div  id="zz' + licenseData[i].license + '" name="0" class="weui-panel__bd">' +
-								'</div>' +
-								'<div class="weui-cell__bd">' +
-								'<p>' + licenseData[i].license + '工商营业执照' + (i + 1) + '</p>' +
-								'</div>' +
-								'<div id="front" class="weui-cell__ft"><svg class="icon" aria-hidden="true">' +
-								'<use xlink: href="#icon-paizhao"></use>' +
-								'</svg></div>' +
-								'</a >' +
-								'<a class="weui-cell weui-cell_access" onclick="getLicense(' + licenseData[i].license + ')" href="javascript:;">' +
-								'<div  id="img' + licenseData[i].license + '" name="0" class="weui-panel__bd">' +
-								'</div>' +
-								'<div class="weui-cell__bd">' +
-								'<p>' + licenseData[i].license + '许可证正本照片' + (i + 1) + '</p>' +
-								'</div>' +
-								'<div id="front" class="weui-cell__ft"><svg class="icon" aria-hidden="true">' +
-								'<use xlink: href="#icon-paizhao"></use>' +
-								'</svg></div>' +
-								'</a >'
-							);
-						}
-
-					}
-				});
-				//提交
-				$("#submit").click(
-					function () {
-
-						location.href = "../sucess.html";
-						// console.log("数组 " + license);
-						// var error = "";
-						// var img1 = $("#img1").attr(
-						// 	"name");
-						// if (img1 == 0) {
-						// 	error = "身份证正面照照片不能空!";
-						// }
-						// var img2 = $("#img2").attr(
-						// 	"name");
-						// if (img2 == 0) {
-						// 	error = "身份证反面照照片不能空!";
-						// }
-						// console.log("img地址不为空" + $('img [src!=""]'));
-
-						// for (let index = 0; index < license.length; index++) {
-						// 	if ($('img' + license[index]).attr("name") == 0) {
-						// 		error = "许可证号正本不能为空!";
-						// 	}
-						// 	else if ($('zz' + license[index]).attr("name")) {
-						// 		error = "营业执照不能为空!";
-						// 	}
-						// }
-						// var img3 = $("#other").attr(
-						// 	"name");
-						// var img4 = $("#displayarea")
-						// 	.attr("name");
-						// if (img4 == 0) {
-						// 	error = "签名不能空!";
-						// }
-
-						// if (error != "") {
-
-						// 	$.alert({
-						// 		title: "",
-						// 		text: error,
-						// 		onOK: function () {
-						// 			//点击确认
-						// 		}
-						// 	});
-
-						// } else {
-						// 	var arrays = new Array(
-						// 		img1, img2, img4);
-
-						// 	var i;
-						// 	for (i in licenseImg) {
-						// 		arrays.push($("#" + licenseImg[i] + "").attr("name"));
-						// 	}
-						// 	if (img3 != null && img3 != 0 && img3 != "") {
-						// 		arrays.push(img3);
-						// 	}
-						// 	console.log('保存图片数组的id' + arrays);
-
-						// 	console.log("arrays=" + arrays);
-						// 	$.post(
-						// 		"/ycglj/mobile/user/updateAffire.do",
-						// 		{
-						// 			arrays: JSON
-						// 				.stringify(arrays)
-						// 		},
-						// 		function (
-						// 			text) {
-						// 			console.log(text);
-						// 			if (text == 1) {
-
-						// 				$
-						// 					.alert({
-						// 						title: "",
-						// 						text: "成功",
-						// 						onOK: function () {
-						// 							//点击确认
-						// 							location.href = "/ycglj/mobile/asset";
-						// 						}
-						// 					});
-
-						// 			} else {
-
-						// 			}
-
-						// 		});
-
-						// }
-
-					})
-
-				// $("#b3").click(function () {
-				//     if($(".signature").jSignature('getData', 'native').length>0){
-				//         alert("已签名");
-				//     }else
-				//     alert("未签名");
-				// })
-
-				function saveImg() {
-					//此导出插件返回数组[MIMETYPE，签名的SVG的base64编码字符串划]
-					var datapair = $("#signature").jSignature(
-						"getData", "image");
-					var i = new Image();
-					i.src = "data:" + datapair[0] + ","
-						+ datapair[1];
-					$(i).appendTo($("#displayarea"));
-					if ($("#signature").jSignature('getData',
-						'native').length > 0) {
-
-						$.post("../../file/inputImage.do", {
-							file: "data:" + datapair[0] + ","
-								+ datapair[1]
-						}, function (text) {
-							console.log(text);
-							var result = JSON.parse(text);
-
-							var data = result.state;
-
-							var img = result.url;
-
-							var uuid = result.uuid;
-
-							$("#displayarea").attr("name", uuid);
-						});
-
-						$.closeModal();
-					} else {
-						$.closeModal();
-
-						$.post("../../file/inputImage.do", {
-							file: "data:" + datapair[0] + ","
-								+ datapair[1]
-						}, function (text) {
-							console.log(text);
-							var result = JSON.parse(text);
-
-							var data = result.state;
-
-							var img = result.url;
-
-							var uuid = result.uuid;
-
-							$("#displayarea").attr("name", uuid);
-						});
-
-					}
+		$(document).ready(function () {
+			var startTime, endTime;
+			$("#date").calendar({
+				onChange: function (p, values, displayValues) {
+					console.log(displayValues);
+					startTime = displayValues;
 				}
+			});
+			$("#date1").calendar({
+				onChange: function (p, values, displayValues) {
+					console.log(displayValues);
+					endTime = displayValues;
+				}
+			});
+			//提交
+			$("#submit").click(
+				function () {
+					// location.href = "../sucess.html";
+					console.log("数组 " + license);
+					var error = "";
+					var img1 = $("#img1").attr(
+						"name");
+					if (img1 == 0) {
+						error = "身份证正面照照片不能空!";
+					}
+					var img2 = $("#img2").attr(
+						"name");
+					if (img2 == 0) {
+						error = "身份证反面照照片不能空!";
+					}
+					console.log("img地址不为空" + $('img [src!=""]'));
 
-			})
+					for (let index = 0; index < license.length; index++) {
+						if ($('img' + license[index]).attr("name") == 0) {
+							error = "许可证号正本不能为空!";
+						}
+						else if ($('zz' + license[index]).attr("name")) {
+							error = "营业执照不能为空!";
+						}
+					}
+					var img3 = $("#other").attr(
+						"name");
+					var img4 = $("#displayarea")
+						.attr("name");
+					if (img4 == 0) {
+						error = "签名不能空!";
+					}
+
+					if (error != "") {
+
+						$.alert({
+							title: "",
+							text: error,
+							onOK: function () {
+								//点击确认
+							}
+						});
+
+					} else {
+						var arrays = new Array(img1, img2);
+						console.log('保存图片数组的id' + arrays);
+
+						console.log("arrays=" + arrays);
+						$.post(
+							"/ycglj/mobile/user/updateAffire.do",
+							{
+								type: 4,
+								arrays: JSON.stringify(arrays)
+							},
+							function (text) {
+								console.log(text);
+								if (text == 1) {
+									$.alert({
+										title: "",
+										text: "成功",
+										onOK: function () {
+											//点击确认
+											location.href = "../sucess.html";
+										}
+									});
+
+								} else {
+								}
+							});
+					}
+				})
+
+		})
 	</script>
 	<!-- <script type="text/jscript" src="js/jSignature.min.noconflict.js"></script> -->
 </body>
